# easyAIs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Dependencies.md  FAQ.md  Introduction.md  Releases.md  struc.txt
docs/Datasets/: MNIST Exploration.ipynb  MNIST.md
docs/Examples/: Overview.md  Perceptron_Logic_Gates.md
docs/Source/: Overview.md
examples/: MLP_XOR_problem.ipynb  Perceptron_Logic_Gates.ipynb
models/: model_easyNet.h5
scripts/: add_req.py  add_requirements.py  convert.py
src/easyAIs/: __init__.py  activations.py  arquitectures.py  layers.py  loss.py
src/easyAIs/configs/: __init__.py  custom.py  default.py
src/easyAIs/core/: __init__.py  functions.py  layer.py  metrics.py  models.py  neural_components.py  optimizers.py
src/easyAIs/preprocessing/: __init__.py  loaders.py
src/easyAIs/preprocessing/datasets/: __init__.py  mnist.py
src/easyAIs/utils/: __init__.py  errors.py  instances.py  math.py  verifiers.py
src/easyAIs/visualization/: __init__.py
templates/: example.ipynb  writing_code.md
tests/Arquitectures/: test_mlp.py  test_perceptron.py
tests/core/: test_models.py  test_neural_components.py
tests/functions/: test_activations.py  test_loss.py
tests/mnist/: imporing_mnist.py  training_mnist.py
