[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "easyAIs"
version = "0.0.10"
description = "A collection of tools for deep learning using Python"
authors = ["Uriel Rubio <privuri@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/privUr1x/AIClasses"
bugs = "https://github.com/privUr1x/AIClasses/issues"
docs = "https://github.com/privUr1x/AIClasses/wiki"

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4.3"
random = ""
functools = ""
plotly = ""
mnist = "0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.extras]
dev = ["black"]
