[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "easyAIs"
version = "0.0.0"
description = ""
authors = ["Uriel Rubio <urubio.g2@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/urubiog/easyAIs"
bugs = "https://github.com/urubiog/easyAIs/issues"
docs = "https://github.com/urubiog/easyAIs/wiki"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.extras]
dev = ["black", "commitizen"]
